--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "dotenv-cli": "^4.1.1",
+    "framer-motion": "4.1.17",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
